src/test/deca/context/invalid/invalid_essentiel/decl_field.deca
//Description:
//    Programme de test de declaration incorrect de champs.
//

class A {
	int x;
	float y = this.z;
}
